# aumos-physical-ai

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
src/aumos_physical_ai/: __init__.py  main.py  settings.py
src/aumos_physical_ai/adapters/: __init__.py  blenderproc_client.py  domain_randomizer.py  foundation_model_adapter.py  grasping_simulator.py  kafka.py  motion_planner.py  mujoco_mjx_adapter.py  physics_engine_adapter.py  real_world_adapter.py  repositories.py  ros2_bridge.py  safety_validator.py  sensor_fusion.py  sensor_simulator.py  sim2real_adapter.py  urdf_parser.py
src/aumos_physical_ai/api/: __init__.py  router.py  schemas.py
src/aumos_physical_ai/core/: __init__.py  interfaces.py  models.py  services.py
tests/: __init__.py  test_services.py
