[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aumos-physical-ai"
version = "0.1.0"
description = "AumOS Physical AI — digital twin pipelines, robotics sensor synthesis, sim-to-real transfer learning, domain randomization, and multi-sensor fusion"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "AumOS Enterprise" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aumos-common>=0.1.0",
    "aumos-proto>=0.1.0",
    "fastapi>=0.110.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "numpy>=1.26.0",
    "lxml>=5.1.0",
    "open3d>=0.18.0",
    "pyarrow>=15.0.0",
    "boto3>=1.34.0",
    "aiofiles>=23.2.0",
    "confluent-kafka>=2.3.0",
    "redis>=5.0.0",
    "structlog>=24.1.0",
    "opentelemetry-api>=1.23.0",
    "opentelemetry-sdk>=1.23.0",
]

[project.optional-dependencies]
# GAP-352: GPU-accelerated physics via MuJoCo MJX
gpu_physics = [
    "mujoco>=3.1.0",          # Apache 2.0 — simulation engine
    "jax>=0.4.26",            # Apache 2.0 — GPU backend for MJX
    "jaxlib>=0.4.26",         # Apache 2.0 — JAX binary
]
# GAP-353: VLA foundation model — Octo (UC Berkeley, Apache 2.0)
vla_models = [
    "octo-robot>=0.1.0",      # Apache 2.0 — optional, requires GPU with >=8GB VRAM
    "jax>=0.4.26",
    "jaxlib>=0.4.26",
]
# GAP-354: URDF/SDF parsing (lxml already in core deps if added by user)
robot_description = [
    "lxml>=5.1.0",            # BSD 3-Clause — XML parser for URDF/SDF
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "testcontainers[postgres,kafka,redis]>=3.7.0",
    "factory-boy>=3.3.0",
    "types-boto3>=1.34.0",
    "types-redis>=4.6.0",
    "types-aiofiles>=23.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aumos_physical_ai"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "ANN", "B", "A", "COM", "C4", "PT", "RUF"]
ignore = ["ANN101", "ANN102", "COM812"]

[tool.ruff.lint.isort]
known-first-party = ["aumos_physical_ai"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=aumos_physical_ai --cov-report=term-missing --cov-fail-under=80"
